--- a/package.json
+++ b/package.json
@@ -2,8 +2,7 @@
   "name": "koa2-Blog",
   "version": "0.9.0",
   "description": "Use Koa2 to build a blog.",
-  "engines": {
-  },
+  "engines": {},
   "main": "run.js",
   "scripts": {
     "start": "node run.js"
@@ -19,31 +18,31 @@
     "babel-plugin-transform-es2015-modules-commonjs": "^6.14.0",
     "babel-preset-es2017": "^6.14.0",
     "babel-register": "^6.14.0",
+    "cheerio": "^0.20.0",
+    "cloudinary": "^1.4.1",
+    "ejs": "^2.5.1",
     "fs-promise": "^0.5.0",
+    "ioredis": "^2.3.0",
     "koa": "^2.0.0",
+    "koa-better-body": "^2.0.1",
     "koa-compress": "^2.0.0",
     "koa-convert": "^1.2.0",
     "koa-cors": "^0.0.16",
+    "koa-favicon": "^2.0.0",
     "koa-json": "^1.1.1",
     "koa-logger": "^1.3.0",
+    "koa-onerror": "^2.0.0",
     "koa-router": "^7.0.1",
+    "koa-session2": "^1.0.8",
     "koa-static": "^2.0.0",
     "koa-views": "^5.0.2",
-    "ejs": "^2.5.1",
-    "koa-session2": "^1.0.8",
-    "ioredis": "^2.3.0",
-    "koa-onerror": "^2.0.0",
+    "mditor": "^1.3.3",
     "moment": "^2.13.0",
-    "mditor": "^0.1.4",
-    "mysql": "2.11.1",
-    "sequelize":"^3.24.1",
-    "cloudinary": "^1.4.1",
-    "koa-better-body": "^2.0.1",
-    "koa-favicon": "^2.0.0",
-    "superagent": "^2.2.0",
-    "superagent-promise": "^1.1.0",
-    "cheerio": "^0.20.0",
-    "node-schedule": "^1.1.1"
-  },
-  "license": "MIT"
+    "mysql": "^2.16.0",
+    "node-schedule": "^1.1.1",
+    "nunjucks": "^3.1.3",
+    "sequelize": "^3.24.1",
+    "superagent": "^3.8.3",
+    "superagent-promise": "^1.1.0"
+  }
 }
