--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "babel-plugin-transform-es2015-modules-commonjs": "^6.14.0",
     "babel-preset-es2017": "^6.14.0",
     "babel-register": "^6.14.0",
+    "bcryptjs": "^2.4.3",
     "cheerio": "^0.20.0",
     "cloudinary": "^1.4.1",
     "ejs": "^2.5.1",
@@ -25,6 +26,7 @@
     "ioredis": "^2.3.0",
     "koa": "^2.0.0",
     "koa-better-body": "^2.0.1",
+    "koa-bodyparser": "^4.2.1",
     "koa-compress": "^2.0.0",
     "koa-convert": "^1.2.0",
     "koa-cors": "^0.0.16",
@@ -33,6 +35,7 @@
     "koa-logger": "^1.3.0",
     "koa-onerror": "^2.0.0",
     "koa-router": "^7.0.1",
+    "koa-session": "^5.10.0",
     "koa-session2": "^1.0.8",
     "koa-static": "^2.0.0",
     "koa-views": "^5.0.2",
